feat: add steppers

--- a/src/index.html
+++ b/src/index.html
@@ -612,21 +612,21 @@
                   <div class="form-booking__steppers">
                     <h5 class="form-booking__title">Entry ticket</h5>
                     <div class="header-block__line"></div>
-                    <div class="stappers-booking">
+                    <div class="stappers-booking js-cart">
                       <div class="stappers-booking__basic">
                         <div class="stappers-booking__subtitle">Basic 18+ (20 €)</div>
-                        <div class="stappers-booking__stepper stapper">
-                          <button type="button" class="stapper__button">–</button>
-                          <div class="stapper__number stapper__number--basic">1</div>
-                          <button type="button" class="stapper__button">+</button>
+                        <div class="stappers-booking__stepper stapper js-counter">
+                          <button type="button" class="stapper__button js-minus disabled">–</button>
+                          <div class="stapper__number stapper__number--senior js-current-items">1</div>
+                          <button type="button" class="stapper__button js-plus">+</button>
                         </div>
                       </div>
                       <div class="stappers-booking__senior">
                         <div class="stappers-booking__subtitle">Senior 65+ (10 €)</div>
-                        <div class="stappers-booking__stepper stapper">
-                          <button type="button" class="stapper__button">–</button>
-                          <div class="stapper__number stapper__number--senior">1</div>
-                          <button type="button" class="stapper__button">+</button>
+                        <div class="stappers-booking__stepper stapper js-counter">
+                          <button type="button" class="stapper__button js-minus disabled">–</button>
+                          <div class="stapper__number stapper__number--senior js-current-items">1</div>
+                          <button type="button" class="stapper__button js-plus">+</button>
                         </div>
                       </div>
                     </div>
