fix: fix adaptive booking

--- a/src/index.html
+++ b/src/index.html
@@ -704,7 +704,7 @@
                         <input type="text" class="card__name" placeholder="name surname">
                       </form>
                     </div>
-                    <div class="card__back">
+                    <!-- <div class="card__back">
                       <div class="card__wrapper">
                         <div class="card__line"></div>
                         <div class="card__cvv">
@@ -713,7 +713,7 @@
                           <p class="card__info">The last 3 or 4 digits on back of the card</p>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <button type="submit" form="bookingForm" class="overwiev__btn btn btn--accent btn--long">Book</button>
                 </div>
