feat: add aria-label

--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,8 @@
               type="range" 
               min="0" 
               max="100" 
-              value="61">
+              value="61"
+              aria-label="comparison">
           </div>
         </div>
       </section>
@@ -302,9 +303,9 @@
             </div>
             <div class="main-player__setting" id="setting">
               <button class="main-player__play-btn" aria-label="play" title="play"></button>
-              <input class="main-player__progress" type="range" value="0" step="0.1" min="0" max="100">
+              <input class="main-player__progress" type="range" value="0" step="0.1" min="0" max="100" aria-label="progress video">
               <button class="main-player__mute" aria-label="volume" title="volume"></button>
-              <input class="main-player__volume" type="range" min="0" max="1" step="0.01" value="0.4">
+              <input class="main-player__volume" type="range" min="0" max="1" step="0.01" value="0.4" aria-label="volume video">
               <button class="main-player__fullscreen" aria-label="fullscreen" title="fullscreen"></button>
             </div>
             <div class="main-player__speed">1x</div>
